[package]
name = "raidme"
version = "0.1.0"
edition = "2021"
description = "AI assistant tool that analyzes git repositories and generates knowledge files"
license = "MIT"
repository = "https://github.com/parasitid/raidme"

[[bin]]
name = "raidme"
path = "src/main.rs"

[lib]
name = "raidme"
path = "src/lib.rs"

[dependencies]
# LLM integration
rig-core = "0.13.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "migrate", "macros"] }

# Async traits
async-trait = "0.1"

# CLI and configuration
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# File system and git operations
walkdir = "2.4"
git2 = "0.18"
ignore = "0.4"

# Text processing and templating
regex = "1.10"
handlebars = "4.5"

# Logging and progress
tracing = "0.1"
tracing-subscriber =  { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"

# Configuration file handling
toml = "0.8"
dirs = "5.0"

# Async utilities
futures = "0.3"
env_logger = "0.11.8"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

